# infradrift

./: Cargo.toml  LICENSE  README.md  build.rs  infradrift.toml
.github/workflows/: ci.yml  release.yml
skills/: README.md
skills/infradrift/: SKILL.md  TRUST.md
skills/infradrift/agents/: openai.yaml
src/: cli.rs  config.rs  main.rs
src/drift/: detector.rs  types.rs
src/filter/: engine.rs
src/output/: csv_output.rs  hcl.rs  human.rs  json.rs  mod.rs  table.rs
src/plan/: executor.rs  mod.rs  parser.rs  schema.rs
tests/fixtures/: plan_no_drift.json  plan_with_drift.json
