[package]
name = "infradrift"
version = "0.1.0"
edition = "2021"
description = "Detect infrastructure drift from Terraform/OpenTofu plans"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
colored = "3"
comfy-table = "=7.1.3"
csv = "1"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
